--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/beige_color"
+    android:background="@color/beige_styleguide"
     tools:context=".ui.main.LoginFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -28,10 +28,10 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:text="@string/login_welcome_label"
-            android:textColor="@color/dark_blue_color"
-            android:textSize="24dp"
             android:textAlignment="center"
             android:textAllCaps="true"
+            android:textColor="@color/text_style_3_color"
+            android:textSize="@dimen/text_tyle_3_dimen"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -41,11 +41,11 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="24dp"
             android:text="@string/login_lorem_ipsum_label"
-            android:textColor="@color/dark_blue_color"
             android:textAlignment="center"
-            android:textSize="16dp"
+            android:textColor="@color/text_style_3_color"
+            android:textSize="@dimen/text_tyle_8_dimen"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -69,7 +69,7 @@
                 android:drawablePadding="10dp"
                 android:ems="10"
                 android:inputType="textEmailAddress"
-                android:textColor="@color/charcoal_grey_color" />
+                android:textColor="@color/text_style_7_color" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -93,7 +93,7 @@
                 android:drawablePadding="10dp"
                 android:ems="10"
                 android:inputType="textPassword"
-                android:textColor="@color/charcoal_grey_color" />
+                android:textColor="@color/text_style_7_color" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -103,7 +103,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:backgroundTint="@color/water_color"
+            android:backgroundTint="@color/water_styleguide"
             android:text="@string/login_enter_label"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
